--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,7 +7,22 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/static/css/welcome.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+        .welcome-section {
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .welcome-text {
+            font-size: 1.5rem;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
+
 <body>
 <div class="container">
     <div class="welcome-section">
@@ -15,7 +30,7 @@
         <p class="welcome-text">Effortless Scheduling, Enhanced Productivity</p>
             <div class="text-center">
                 <a href="/login" class="btn btn-primary mx-2">Login</a>
-                <a href="/register" class="btn btn-secondary mx-2">Create Account</a>
+                <a href="/signup" class="btn btn-secondary mx-2">Create Account</a>
             </div>
     </div>
 </div>
