--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up</title>
+  <title>Sign Up - iSchedule</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     .signup-container {
@@ -22,15 +22,15 @@
     <h1 class="text-center m-3">Sign Up</h1>
     <form th:action="@{/signup}" method="post">
       <div class="form-group">
-        <label for="email">Email</label>
+        <label for="email">Email:</label>
         <input type="email" class="form-control" id="email" name="email" required>
       </div>
       <div class="form-group">
-        <label for="username">Username</label>
+        <label for="username">Username:</label>
         <input type="text" class="form-control" id="username" name="username" required>
       </div>
       <div class="form-group">
-        <label for="password">Password</label>
+        <label for="password">Password:</label>
         <input type="password" class="form-control" id="password" name="password" required>
       </div>
       <button type="submit" class="btn btn-primary">Sign Up</button>
