--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,11 +24,11 @@
     </thead>
     <tbody>
     <!-- Iterate over the courses enrolled by the student -->
-    <!--<tr th:each="course : ${enrolledCourses}">
+    <tr th:each="course : ${enrolledCourses}">
       <td th:text="${course.name}"></td>
-      <td th:text="${course.room.name}"></td>
-      <td th:text="${course.time}"></td>
-    </tr>  -->
+      <td th:text="${course.courseSchedule.room.name}"></td>
+      <td th:text="${course.courseSchedule.startTime} + ' - ' + ${course.courseSchedule.endTime}"></td>
+    </tr>
     </tbody>
   </table>
 
