enroll causes no error anymore, but still not working

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,8 +32,6 @@
     </tbody>
   </table>
 
-
-
   <!-- Administrator Actions -->
   <div th:if="${isAdmin}">
     <h2>Administrator Actions</h2>
@@ -58,8 +56,7 @@
   <!-- Student Actions -->
   <div th:if="${isStudent}">
     <h2>Student Actions</h2>
-    <!-- Student-specific actions -->
-    <!-- All Courses -->
+    <!-- Student-specific actions (enroll) -->
     <h2>All Courses</h2>
     <table class="table">
       <thead>
